feat(Teste): add JaCoCo for project testing